# stm32L4-rtic-example

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
